<resources>
    <string name="app_name">Zealicon22</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reach">Reach</string>
    <string name="home">Home</string>
    <string name="sponsors">Sponsors</string>
    <string name="team">Team</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_events">Explore Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="day_one">DAY ONE</string>
    <string name="day_two">DAY TWO</string>
    <string name="day_three">DAY THREE</string>
    <string name="day_four">ALL</string>
    <string name="sign_up">Register</string>
    <string name="hint_name">NAME</string>
    <string name="hint_email">EMAIL ID</string>
    <string name="hint_phone">MOBILE NUMBER (10 DIGITS)</string>
    <string name="hint_adm_number">ADMISSION NUMBER</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="select_avatar">SELECT AVATAR</string>
    <string name="error_name">ENTER A VALID NAME</string>
    <string name="error_email">ENTER A VALID EMAIL ADDRESS</string>
    <string name="error_phone">ENTER A VALID PHONE NUMBER</string>
    <string name="error_adm_number">ENTER A VALID ADMISSION NUMBER</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_logo">app_logo</string>
    <string name="menu_icon">menu_icon</string>

    <string name="categories">Categories</string>
    <string name="search_events">Search Events</string>
    <string name="enter_your_search_term">ENTER YOUR SEARCH TERM</string>

    <string name="my_events">MY EVENTS</string>
    <string name="no_events">YOU DON\'T HAVE ANY EVENTS!!</string>
    <string name="AAAAAAAAAAAAAAAAAAAAAAAA">AAAAAAAAAAAAAAAAAAAAAAAA</string>

    <string name="example_event">Line Up</string>
    <string name="example_date">26 April, 2022</string>
    <string name="example_society">Google Developer Student Clubs</string>

    <string name="title_discover">DISCOVER</string>
    <string name="title_home">HOME</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_about">ABOUT</string>
    <string name="title_team">TEAM</string>
    <string name="title_reach_us">REACH US</string>

    <string name="event_detail_heading_info">INFO</string>
    <string name="event_detail_heading_rules">RULES</string>
    <string name="event_detail_heading_prizes">PRIZES</string>
    <string name="event_detail_heading_contact">CONTACT</string>


    <string name="management">Management</string>
    <string name="core_team">Core Team</string>
    <string name="tech_team">Technical Team</string>
    <string name="zealicon">Zealicon</string>

    <string name="zealicon_2022">Zealicon 2022</string>

    <string name="nav_title_home">HOME</string>
    <string name="nav_title_search">SEARCH</string>
    <string name="nav_title_my_events">MY EVENTS</string>

    <string name="date_26">26 APRIL, 2022</string>
    <string name="date_27">27 APRIL, 2022</string>
    <string name="date_28">28 APRIL, 2022</string>

    <string name="example_event_name">LINE-UP</string>
    <string name="example_event_category">OTHERS</string>
    <string name="example_event_location">AB1</string>
    <string name="example_event_time">15:55 Hours</string>
    <string name="example_event_phone">+91 9988779988</string>
    <string name="example_event_heading_info">INFO</string>
    <string name="example_event_info">It will be a fun event,displayed on an android application.\nIn this event, players will be divided into teams and they will be unaware of their teammates. Each player has to interact with all other participants to complete his team. The team with maximum or all the members will be the winner.\nUse your head, observe and explore, either get in or get out to hunt your teammate!!</string>
    <string name="example_event_heading_rules">RULES</string>
    <string name="example_event_rules">- Team Size: 1 - 5\n- Team Size: 1 - 5</string>
    <string name="example_event_heading_prize">PRIZES</string>
    <string name="example_event_prize">- INR 5,555 - First Place \n- INR 5,555 - Second Place</string>
    <string name="example_event_heading_contact">CONTACT</string>
    <string name="example_event_contact">- Dhruv Baliyan : 9977889977</string>
    <string name="zealicon_about">Zealicon is the annual techno-cultural festival of JSSATE, Noida. Dedicated to the celebration of creativity and science, it is a stimulating event brimming with youthful dynamism. It transforms the campus into a veritable kaleidoscope of people. Involving multifarious exciting events from technical scratch to cultural zeal. A platform for all the creative minds to express their ideas in the form of events including band performances, discussions, film screenings that are spread over four days. Apart from the exuberant cultural events, Zealicon is also known for its mind boggling technical events that creates an ambience for the technocrats.\n\nZealicon 2022 will cover the aspects of hysterical face of literature along with popular arts, science and technology. This edition of Zealicon promises all the trademarks of the earlier versions. A plethora of events where academicians will vouch out their intellect and artists will showcase the best of art. Projecting the fictitious gesture onto the real world, Zealicon will act as a connecting link between the fantasy and reality. Creating an aura of avidity and togetherness, We hope that Zealicon 2022 will turn out to be a memorable experience for you !</string>
    <string name="find_zeal_id">FIND ZEAL ID</string>


</resources>