<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".my_events.MyEventsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/giants"
        android:text="@string/my_events"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/red"
        android:src="@drawable/ic_bt_register_now"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_events_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="120dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_events"
        tools:listitem="@layout/item_event_card" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/AAAAAAAAAAAAAAAAAAAAAAAA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:alpha=".1"
        android:fontFamily="@font/badaboom"
        android:letterSpacing=".2"
        android:maxLines="1"
        android:rotation="-8"
        android:text="@string/AAAAAAAAAAAAAAAAAAAAAAAA"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/no_events_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/no_events_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cartoonist_hand"
        android:text="@string/no_events"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_events" />

</androidx.constraintlayout.widget.ConstraintLayout>