<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/event_constraint"
    android:layout_marginTop="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/event_background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-12dp"
        android:layout_marginHorizontal="8dp"
        android:foregroundGravity="bottom"
        android:scaleType="fitEnd"
        android:src="@drawable/events_background1"
        app:layout_constraintStart_toStartOf="@id/info_card"
        app:layout_constraintEnd_toEndOf="@id/info_card"
        app:layout_constraintTop_toTopOf="@id/info_card"
        app:layout_constraintBottom_toBottomOf="@id/info_card"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/info_card"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="32dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="18dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/event_info_card_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_event"
                android:textColor="@color/white"
                android:fontFamily="@font/webcomic"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="16dp"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/example_date"
                android:layout_marginHorizontal="24dp"
                android:fontFamily="@font/webcomic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_name"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/event_society"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/example_society"
                android:fontFamily="@font/webcomic"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/event_web_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_img_spider_web"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>