<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background2"
    tools:context=".teams.TeamsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/management"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/giants"
                android:text="@string/management"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/managementRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="32dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/management"
                app:spanCount="2"
                tools:itemCount="2"
                tools:listitem="@layout/item_team" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/coreTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/giants"
                android:text="@string/core_team"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/managementRecycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/coreTeamRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="35dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coreTeam" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/techTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/giants"
                android:text="@string/tech_team"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coreTeamRecycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/techTeamRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingBottom="120dp"
                android:layout_marginHorizontal="35dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/techTeam" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>