<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".EventDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="120dp"
        android:clipToPadding="false">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/giants"
            android:textColor="@color/white"
            android:layout_marginStart="28dp"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/event_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:fontFamily="@font/webcomic"
            app:layout_constraintStart_toStartOf="@id/event_name"
            app:layout_constraintTop_toBottomOf="@id/event_name"/>

        <View
            android:id="@+id/dot"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:background="@drawable/bg_yellow"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@id/event_category"
            app:layout_constraintTop_toTopOf="@id/event_category"
            app:layout_constraintStart_toEndOf="@id/event_category"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/event_society"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_society"
            android:textColor="@color/white"
            android:fontFamily="@font/webcomic"
            app:layout_constraintStart_toEndOf="@id/dot"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@id/event_category"/>

        <View
            android:id="@+id/view_above_image"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/event_society"/>

        <View
            android:id="@+id/view_below_image"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_marginTop="160dp"
            app:layout_constraintTop_toBottomOf="@+id/view_above_image"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/events_background1"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_above_image"
            app:layout_constraintBottom_toTopOf="@id/view_below_image"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bt_register_now"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_above_image"
            app:layout_constraintBottom_toTopOf="@id/view_below_image"/>

        <LinearLayout
            android:id="@+id/event_detail_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_below_image">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <include
                    android:id="@+id/event_calendar"
                    layout="@layout/item_event_detail_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_weight="1"/>

                <include
                    android:id="@+id/event_location"
                    layout="@layout/item_event_detail_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">
                <include
                    android:id="@+id/event_clock"
                    layout="@layout/item_event_detail_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_weight="1"/>

                <include
                    android:id="@+id/event_phone"
                    layout="@layout/item_event_detail_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/info_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_two_bars"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/event_detail_linear"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/example_event_heading_info"
            android:fontFamily="@font/giants"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="@id/info_img"
            app:layout_constraintBottom_toBottomOf="@id/info_img"
            app:layout_constraintStart_toEndOf="@id/info_img"
            android:layout_marginStart="12dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/event_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_img"
            android:layout_marginTop="12dp"
            android:text="@string/example_event_info"
            android:fontFamily="@font/webcomic"
            android:lineSpacingExtra="12dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="28dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rules_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_two_bars"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/event_info"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rules_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/example_event_heading_rules"
            android:fontFamily="@font/giants"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="@id/rules_img"
            app:layout_constraintBottom_toBottomOf="@id/rules_img"
            app:layout_constraintStart_toEndOf="@id/rules_img"
            android:layout_marginStart="12dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/event_rules"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rules_img"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/webcomic"
            android:lineSpacingExtra="12dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="28dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/prize_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_two_bars"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/event_rules"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/prize_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/example_event_heading_prize"
            android:fontFamily="@font/giants"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="@id/prize_img"
            app:layout_constraintBottom_toBottomOf="@id/prize_img"
            app:layout_constraintStart_toEndOf="@id/prize_img"
            android:layout_marginStart="12dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/event_prize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/prize_img"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/webcomic"
            android:lineSpacingExtra="12dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="28dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/contact_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_two_bars"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/event_prize"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contact_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/example_event_heading_contact"
            android:fontFamily="@font/giants"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="@id/contact_img"
            app:layout_constraintBottom_toBottomOf="@id/contact_img"
            app:layout_constraintStart_toEndOf="@id/contact_img"
            android:layout_marginStart="12dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/event_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/contact_img"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/webcomic"
            android:lineSpacingExtra="12dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="28dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>